runall working properly, had to move cpu.isexecting = false only to the scheduler to do.
PCB display is working but the really cool quicksort is not yet.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
    <div id="divConsole" style="margin:4px; width:500px; height:700px; float:left;">
       <canvas id="display"
               width="500px"
-              height="600px"
+              height="650px"
               tabindex="3">
       </canvas>
    </div>
@@ -118,13 +118,14 @@
    
     <div id="divPCBstatus" style="position: absolute; top:540px; left:900px;">
       <label>
-         PCB
+         Processes / PCB info<br />
+         PID&nbsp;&nbsp;|&nbsp;Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| State	
          <br>
-         <div name="taPCBstatus" id="taPCBstatus" style="height:120px; width:250px; overflow-y: scroll; background-color:white; font-family:monospace;"></div>
+         <div name="taPCBstatus" id="taPCBstatus" style="height:100px; width:250px; overflow-y: scroll; background-color:white; font-family:monospace;"></div>
       </label>
    </div>
    
-   <div id="divTaskBar" style="width:100%; position: absolute; top:700px; left:0px; background-color:white; margin-top:15px; text-align:center;">
+   <div id="divTaskBar" style="width:100%; position: absolute; top:685px; left:0px; background-color:white; margin-top:15px; text-align:center;">
    		
    		<label>
          Current Time: 
