This commit is my daily does of awesome. process / PCB info display is working and cool (need the top style quick sort still) processes are being taken out off and added the cpu correctly and showing all the correct states.

--- a/index.html
+++ b/index.html
@@ -116,12 +116,14 @@
       </label>
    </div>
    
-    <div id="divPCBstatus" style="position: absolute; top:540px; left:900px;">
+    <div id="divPCBstatus" style="position: absolute; top:540px; left:530px;">
       <label>
          Processes / PCB info<br />
-         PID&nbsp;&nbsp;|&nbsp;Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| State	
+         PID&nbsp;&nbsp;|&nbsp;Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         | State&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;PC&nbsp;&nbsp;
+         |&nbsp;&nbsp;ACC&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;X&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Y&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Z&nbsp;&nbsp;&nbsp;	
          <br>
-         <div name="taPCBstatus" id="taPCBstatus" style="height:100px; width:250px; overflow-y: scroll; background-color:white; font-family:monospace;"></div>
+         <div name="taPCBstatus" id="taPCBstatus" style="height:115px; width:500px; overflow-y: scroll; background-color:white; font-family:monospace;"></div>
       </label>
    </div>
    
